src/service/snapshots/tidx__service__tests__paused_cte_clickhouse.snap
---
source: src/service/mod.rs
assertion_line: 979
expression: sig.to_cte_sql_clickhouse()
---
Paused AS (
    SELECT block_num, block_timestamp, log_idx, tx_idx, 
           concat('0x', lower(substring(tx_hash, 3))) AS tx_hash,
           concat('0x', lower(substring(address, 3))) AS address, selector, topic1, topic2, topic3, data, abi_bool(abi_word(data, 0)) AS "paused"
    FROM logs
    WHERE selector = '0x0e2fb031ee032dc02d8011dc50b816eb450cf856abd8261680dac74f72165bd2'
)
