src/service/snapshots/tidx__service__tests__swap_cte_clickhouse.snap
---
source: src/service/mod.rs
assertion_line: 967
expression: sig.to_cte_sql_clickhouse()
---
Swap AS (
    SELECT block_num, block_timestamp, log_idx, tx_idx, 
           concat('0x', lower(substring(tx_hash, 3))) AS tx_hash,
           concat('0x', lower(substring(address, 3))) AS address, selector, topic1, topic2, topic3, data, abi_address(topic1) AS "sender", abi_uint(abi_word(data, 0)) AS "amount0In", abi_uint(abi_word(data, 32)) AS "amount1In", abi_uint(abi_word(data, 64)) AS "amount0Out", abi_uint(abi_word(data, 96)) AS "amount1Out", abi_address(topic2) AS "to"
    FROM logs
    WHERE selector = '0xd78ad95fa46c994b6551d0da85fc275fe613ce37657fb8d5e3d130840159d822'
)
